fix(jdk17): fix package error