@@ -1608,6 +1608,8 @@
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+                            <arg>--add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED</arg>
+                            <arg>--add-exports=java.instrument/sun.tools.instrument=ALL-UNNAMED</arg>
                         </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
